--- a/src/components/Molecules/Client/HeaderClient/HeaderClientStyle.scss
+++ b/src/components/Molecules/Client/HeaderClient/HeaderClientStyle.scss
@@ -15,3 +15,61 @@ header {
   height: 60px;
   position: relative;
 }
+.logo a:first-child {
+  padding: 0 10px 0 0;
+  border-right: 1px solid #3b3b3b;
+  margin-right: 10px;
+  display: inline-block;
+  vertical-align: middle;
+  text-decoration: none;
+  transition: .3s;
+}
+.Logo_author {
+  width: 32px;
+  height: 40px;
+  background-size: 100%;
+  background-repeat: no-repeat;
+  display: inline-block;
+  line-height: 30px;
+  vertical-align: middle;
+}
+.Logo_logo {
+  background-position: 0 0;
+  width: 103px;
+  height: 35px;
+  background-repeat: no-repeat;
+  display: inline-block;
+  line-height: 30px;
+  vertical-align: middle;
+  background-size: 514px 226px;
+}
+.search-cart {
+  float: right;
+  position: relative;
+}
+.search-sp,
+.cart {
+  display: inline-block;
+  vertical-align: middle;
+  background: #2f3033;
+  border-radius: 100%;
+  padding: 10px;
+  height: 40px;
+  width: 40px;
+  position: relative;
+  cursor: pointer;
+}
+.search-sp {
+  margin-right: 10px;
+}
+.icon-search,
+.icon_cart {
+  display: block;
+  margin: 2px auto;
+  display: block;
+  margin: 2px auto;
+  background-repeat: no-repeat;
+  line-height: 30px;
+  background-size: 514px 226px;
+  color: #fff;
+}
